@@ -8,10 +8,10 @@ typedef unsigned int U __attribute__((may_alias));
 void
 foo (void *p)
 {
-  T *a = (int *) p;		/* { dg-warning "initialization from incompatible pointer type" } */
-  int *b = (T *) p;		/* { dg-warning "initialization from incompatible pointer type" } */
-  U *c = (unsigned int *) p;	/* { dg-warning "initialization from incompatible pointer type" } */
-  unsigned int *d = (U *) p;	/* { dg-warning "initialization from incompatible pointer type" } */
+  T *a = (int *) p;		/* { dg-bogus "initialization from incompatible pointer type" } */
+  int *b = (T *) p;		/* { dg-bogus "initialization from incompatible pointer type" } */
+  U *c = (unsigned int *) p;	/* { dg-bogus "initialization from incompatible pointer type" } */
+  unsigned int *d = (U *) p;	/* { dg-bogus "initialization from incompatible pointer type" } */
   (void) a;
   (void) b;
   (void) c;
