@@ -1,3 +1,9 @@
+2016-06-06  Marek Polacek  <polacek@redhat.com>
+
+	* c-c++-common/attr-may-alias-1.c: New test.
+	* c-c++-common/attr-may-alias-2.c: New test.
+	* gcc.dg/pr39464.c: Turn dg-warning into dg-bogus.
+
 2016-06-06  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
 	PR c/24414
