@@ -1,3 +1,9 @@
+2016-06-06  Marek Polacek  <polacek@redhat.com>
+
+	* c-typeck.c (comptypes_internal): Handle comparisons of
+	INTEGER_TYPE, FIXED_POINT_TYPE, and REAL_TYPE nodes.  Don't check
+	TYPE_REF_CAN_ALIAS_ALL.
+
 2016-06-03  Chung-Lin Tang  <cltang@codesourcery.com>
 
 	* c-typeck.c (c_finish_omp_clauses): Mark OpenACC reduction
